--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  background-color: "#EEF2F6"
 }
 
 .App-logo {
@@ -14,14 +15,14 @@
 }
 
 .App-header {
-  background-color: #282c34;
+  /* background-color: #282c34; */
   min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #374F5F
 }
 
 .App-link {
@@ -35,4 +36,28 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.ant-btn.transport-button {
+  /* color: white; */
+  height: 100px;
+  width: 100px;
+  display: inline-block;
+  margin: 10px;
+  font-size: 20px;
+  white-space: normal;
+  word-wrap: break-word;
+  padding: 0px;
+}
+
+.ant-btn.transport-button img {
+  width: 80px;
+  height: 30px;
+  object-fit: cover;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+
+.ant-btn.ant-btn-primary.transport-button img {
+  filter: invert(100%);
 }
