--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,14 @@
   color: #61dafb;
 }
 
+.company-name {
+  margin: 0px;
+  color: #374F5F;
+  padding-left: 20px;
+  display: inline-block;
+  vertical-align: middle;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -52,10 +60,12 @@
 
 .ant-btn.transport-button img {
   width: 80px;
-  height: 30px;
+  height: 60px;
   object-fit: cover;
-  margin-bottom: 10px;
-  margin-top: 10px;
+}
+
+.ant-btn.transport-button.bike img {
+  width: 60px;
 }
 
 .ant-btn.ant-btn-primary.transport-button img {
